# numbers

./: Cargo.toml  LICENSE  README.md
src/: app.rs  calc.rs  main.rs  prime.rs
tests/: cli.rs
