[package]
name = "numbers"
version = "0.1.0"
description = "Playground to do some number processing with Rust."
authors = ["Jens <jens@team-rhino.de>"]
license = "MIT"
homepage = "https://github.com/parkranger/numbers"
repository = "https://github.com/parkranger/numbers.git"
readme = "README.md"
edition = "2018"

[dependencies]
clap = "~2.33.0"
error-chain = "~0.12"
log = "0.4.0"
env_logger = "0.7.1"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
tempfile = "3"
